--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ body {
 }
 /* Container is the basic padding of each section */
 .container {
-    scroll-margin-top: 200px;
+    scroll-margin-top: 12.5rem;
     display: flex;
     padding: 0 2rem;
     flex-direction: column;
