values.css: Changed counters to be aligned with the value boxes above and removed the background, changes to its responsiveness, footer.css: added a gap between input field and subscribe button for mobile view

--- a/css/footer.css
+++ b/css/footer.css
@@ -49,6 +49,7 @@
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
+    row-gap: 1rem;
 }
 
 /* Border color change */
