--- a/css/circle_dots.css
+++ b/css/circle_dots.css
@@ -10,12 +10,13 @@
     text-align: center;
 }
 
-.cirle_dots_title_content h1 {
+.cirle_dots_title_content h2 {
     text-align: center;
     padding: 0 5rem;
     font-size: 2.5rem;
     padding-bottom: 1rem;
     margin-top: 5rem;
+    font-weight: bold;
 }
 
 .cirle_dots_title_content p {
