--- a/css/styles.css
+++ b/css/styles.css
@@ -440,6 +440,179 @@ body {
         width: 80%;
     }
 }
+/*  */
+/* Values */
+/*  */
+
+/* Styles for the title section */
+.values_title {
+    color: var(--dark-blue);
+    text-align: center;
+}
+
+.values_title h1 {
+    font-family: Calibre-Bold;
+    font-size: 1.8rem;
+}
+
+.values_title h2 {
+    font-family: Calibre-Medium;
+    font-size: 2.8rem;
+}
+
+/* Styles for the big boxes section */
+.values_big_boxes {
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
+    gap: 1rem;
+}
+
+.values_big_box {
+    width: 100%;
+    height: 30rem;
+    background-color: var(--white);
+    box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+
+.values_big_box_text {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.values_big_box img {
+    height: 45%;
+    width: 90%;
+    margin-top: 10%;
+    margin-bottom: 1rem;
+}
+
+.values_big_box h2 {
+    color: var(--dark-blue);
+    font-family: Calibre-Bold;
+    font-size: 1.7rem;
+    padding-bottom: 1rem;
+}
+
+.values_big_box p {
+    color: var(--text-color);
+    font-family: Calibre-Regular;
+    font-size: 1.2rem;
+    width: 100%;
+    padding: 0 2rem;
+    padding-bottom: 1rem;
+}
+
+/* Styles for the small boxes section */
+.values_small_boxes {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.values_small_box {
+    max-width: 360px;
+    width: 360px;
+    min-width: 220px;
+    height: 110px;
+    background-color: var(--white);
+    box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.icon {
+    padding-left: 1rem;
+}
+
+.icon img {
+    height: 3rem;
+}
+
+.values_small_box_text {
+    padding-left: 1rem;
+    padding-top: 0.6rem;
+    line-height: 24px;
+}
+
+.values_small_box_text span {
+    font-family: Calibre-Bold;
+    color: var(--dark-blue);
+    font-size: 2rem;
+}
+
+.values_small_box_text p {
+    font-family: Calibre-Regular;
+    color: var(--text-color);
+    font-size: 1.3rem;
+}
+
+@media screen and (max-width: 640px) {
+    .values_big_boxes {
+        flex-wrap: wrap;
+    }
+
+    .container {
+        padding: 0 2rem;
+    }
+
+    .values_small_boxes {
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+
+    .values_big_boxes {
+        flex-wrap: wrap;
+    }
+
+    .container {
+        padding: 0 2rem;
+    }
+
+    .values_small_boxes {
+        flex-wrap: wrap;
+    }
+
+    .values_small_box,
+    .values_big_box {
+        width: 100%;
+        margin-bottom: 2rem;
+        max-width: 100%;
+    }
+
+    .values_small_box {
+        background-color: var(--white);
+        box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2);
+        border-radius: 20px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+
+    .small_middle {
+        margin: 0;
+    }
+
+    .small_middle {
+        margin-left: 1rem;
+        margin-bottom: 1rem;
+        margin-right: 1rem;
+    }
+}
+
 @media screen and (min-width: 1280px) {
     .container {
         padding: 0 15rem !important;
@@ -472,7 +645,64 @@ body {
     .carousel_slide {
         flex-basis: 49%;
     }
+    .values_small_boxes{
+        justify-content: center;
+        flex-wrap: nowrap;
+        width: 100%;
+    }
+
+    .values_small_box{
+        width: 100%;
+        min-width: 210px;
+        flex-direction: column;
+        background-color: var(--background);
+        border: none;
+        box-shadow: unset;
+        gap: 0;
+    }
+    .values_big_box{
+        min-width: 210px;
+    }
+    .values_small_box_text{
+        text-align: center;
+        padding: 0;
+    }
+
+    .icon{
+        padding: 0;
+    }
 }
+
+@media screen and (max-width: 1440px) {
+
+    .values_small_boxes{
+        justify-content: center;
+        flex-wrap: nowrap;
+        width: 100%;
+    }
+
+    .values_small_box{
+        width: 100%;
+        min-width: 210px;
+        flex-direction: column;
+        background-color: var(--background);
+        border: none;
+        box-shadow: unset;
+        gap: 0;
+    }
+    .values_big_box{
+        min-width: 210px;
+    }
+    .values_small_box_text{
+        text-align: center;
+        padding: 0;
+    }
+
+    .icon{
+        padding: 0;
+    }
+}
+
 @media screen and (min-width: 1980px) {
     .container {
         padding: 0 20rem !important;
