--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,11 @@
 @import url(navbar.css);
 @import url(header.css);
-@import url(values.css);
 @import url(services.css);
-@import url(contact.css);
 @import url(footer.css);
 @import url(line.css);
 @import url(circle_dots.css);
 @import url(circle_workspace.css);
 @import url(darkmodebutton.css);
-@import url(line_small.css);
 @import url(hamburger.css);
 @font-face {
     font-family: Calibre-Medium;
@@ -571,9 +568,233 @@ body {
     background-color: var(--normal-blue);
 }
 
+/*  */
+/* Contact */
+/*  */
+
+.contact_form {
+    margin-top: 5%;
+    display:flex;
+    height: 35rem; 
+    padding: 1.875rem;
+    background-color: var(--white);
+    border-radius: 14.4px;
+}
+
+.contact_form h2 {
+    font-family: Calibre-Bold;
+}
+
+.contact_form p {
+    font-family: Calibre-Regular;
+}
+
+.contact_left {
+    flex: 1; 
+    padding: 0.75rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact_right {
+    flex: 1;
+    display: flex; 
+    flex-direction: column; 
+    background-color: var(--background);
+    border-radius: 14.4px;
+    padding: 30px;
+    gap: 2.5rem;
+}
+
+.contact_links { 
+    display: flex;
+    flex-direction: column;
+    margin-top: 3rem;
+}
+
+.contact_links p {
+    margin-bottom: 0.5rem; 
+}
+
+.buttons_contact_right {
+    margin-top: 15px;
+}
+
+.selected_button {
+    padding: 9.6px;
+    align-items: flex-start;
+    gap: 6px;
+    flex-shrink: 0;
+    background-color: var(--dark-blue);
+    color: var(--background);
+    border-radius: 4.8px;
+    border-color: var(--dark-blue);
+    margin: 7px;
+    margin-left: 0px;
+}
+
+.unselected_button {
+    color: grey;
+    text-align: center;
+    padding: 9.6px;
+    background-color: transparent;
+    border: solid 1.2px grey;
+    border-radius: 4.8px;
+}
+
+.contact_right h3 {
+    color: var(--dark-blue);
+    font-family: Calibre-Bold;
+}
+
+.blue_box {
+    border-radius: 9.6px;
+    border: 1.8px solid var(--dark-blue);
+    background: var(--dark-blue);
+    color: var(--white);
+    width: 280px;
+    height: 40px;
+    padding: 10px; 
+    margin-bottom: 10px;
+    display: flex; /* Use flexbox for layout */
+    align-items: center; /* Center vertically within the container */
+}
+
+.blue_box i {
+    display: inline; 
+    margin: 0; 
+    padding-right: 5px;
+}
+.blue_box p {
+    display: inline; 
+    margin: 0; 
+}
+
+.input_contact{
+    border: none; 
+    outline: none; 
+    background-color: transparent; 
+    border-bottom: 1px solid var(--black); 
+    padding: 5px; 
+    width: 100%;
+    color: var(--black);
+}
+
+.submit_button_contactform {
+    background-color: var(--dark-blue);
+    border-radius: 0.6rem;
+    padding: 0.9rem 2.4rem;
+    color: white;
+    border-color: var(--dark-blue);
+    margin-bottom: 20px;
+    border-style: solid;
+    cursor: pointer;
+}
+
+.social_media_icons_left {
+    margin-top: auto;
+}
+
+.social_media_icons_left i {
+    margin-left: 1.25rem; 
+}
+
+.contact_left h1 {
+    color: var(--black);
+}
+
+.contact_links i {
+    margin-right: 10px; /* Add some space between the icon and text */
+}
+
+.contact_mail i,
+.contact_phone i,
+.contact_location i {
+    flex: 0 0 auto;
+    margin-right: 10px;
+}
+
+.contact_mail i,
+.contact_phone i,
+.contact_location i {
+    flex: 0 0 auto;
+    margin-right: 10px;
+}
+
+.contact_mail,
+.contact_phone,
+.contact_location {
+    flex: 0 0 auto;
+    margin-bottom: 10px;
+    font-size: 18px;
+    padding: 8px;
+}
+
+.selected_link {
+    background-color: var(--dark-blue);
+    color: var(--white);
+    border-radius: 10px;
+    padding: 8px;
+}
+
+.svg_icon {
+    filter: var(--logo-filter);
+}
+
+.sub_title_section,
+.title_section {
+    text-align: center;
+}
+
+/*  */
+/* Media tags */
+/*  */
+
+@media screen and (max-width: 1440px) {
+
+    .values_small_boxes{
+        justify-content: center;
+        flex-wrap: nowrap;
+        width: 100%;
+    }
+
+    .values_small_box{
+        width: 100%;
+        min-width: 210px;
+        flex-direction: column;
+        background-color: var(--background);
+        border: none;
+        box-shadow: unset;
+        gap: 0;
+    }
+    .values_big_box{
+        min-width: 210px;
+    }
+    .values_small_box_text{
+        text-align: center;
+        padding: 0;
+    }
+
+    .icon{
+        padding: 0;
+    }
+}
 @media screen and (max-width: 1279px) {
     .line_small {
         margin-right: 25rem;
+    }
+}
+
+@media (max-width: 1280px) {
+    .contact_form{
+        background-color: transparent !important;
+        height: 45rem !important
+    }
+    .contact_left {
+        display: none !important
+    }
+    .contact_right {
+        background-color: var(--white) !important
     }
 }
 
@@ -697,35 +918,7 @@ body {
     }
 }
 
-@media screen and (max-width: 1440px) {
 
-    .values_small_boxes{
-        justify-content: center;
-        flex-wrap: nowrap;
-        width: 100%;
-    }
-
-    .values_small_box{
-        width: 100%;
-        min-width: 210px;
-        flex-direction: column;
-        background-color: var(--background);
-        border: none;
-        box-shadow: unset;
-        gap: 0;
-    }
-    .values_big_box{
-        min-width: 210px;
-    }
-    .values_small_box_text{
-        text-align: center;
-        padding: 0;
-    }
-
-    .icon{
-        padding: 0;
-    }
-}
 
 @media screen and (min-width: 1980px) {
     .container {
@@ -762,6 +955,9 @@ body {
     }
     .faq_leesmeer {
         width: 100%;
+    }
+    .contact_form {
+        padding: 0rem;
     }
 }
 
