--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,80 @@ body {
     padding-left: 0.5rem;
 }
 /*  */
+/* Header */
+/*  */
+
+header {
+    height: 100vh;
+    width: 100%;
+    background-image: var(--header-background);
+    background-size: cover;
+}
+
+#headerimg {
+    object-fit: fill;
+    max-width:100%;
+    max-height:100%;
+}
+
+#headerbackground {
+    width: 100%;
+    position: absolute;
+}
+
+#banner_items {
+    display: flex;
+    width: 100%;
+    height: 80vh;
+    margin-top: 10vh;
+}
+
+.banner_image {
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner_text {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.banner_arrow_down {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.4s ease-in-out;
+}
+
+.banner_arrow_down.scrolled {
+    opacity: 0;
+}
+
+.banner_text h2 {
+    color: var(--dark-blue);
+    font-family: Calibre-Bold;
+    font-size: 4rem;
+}
+
+.banner_text h3 {
+    color: var(--text-color);
+    font-family: Calibre-Regular;
+    font-weight: 300;
+    font-size: 1.5rem;
+}
+
+.banner_text a {
+    font-family: Calibre-Bold;
+    font-size: 1.3rem;
+    color: white;
+}
+
+/*  */
 /* About us */
 /*  */
 #about_us {
@@ -783,9 +857,12 @@ body {
     .line_small {
         margin-right: 25rem;
     }
-}
-
-@media (max-width: 1280px) {
+    .banner_text {
+        width: 100%;
+    }
+    .banner_image {
+        display: none;
+    }
     .contact_form{
         background-color: transparent !important;
         height: 45rem !important
@@ -884,6 +961,12 @@ body {
     }
     .faq_leesmeer {
         width: 75%;
+    }
+    .banner_text {
+        width: 60%;
+    }
+    .banner_image {
+        display: flex;
     }
 }
 @media screen and (min-width: 1440px) {
