--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,4 @@
-@import url(services.css);
 @import url(footer.css);
-@import url(line.css);
 @import url(circle_dots.css);
 @import url(circle_workspace.css);
 @import url(darkmodebutton.css);
@@ -297,6 +295,177 @@ header {
     color: var(--text-color); 
     font-size: 1.5rem;
 }
+
+/*  */
+/* Services */
+/*  */
+
+/* Text header */
+.service_text_1{
+    color: #799DAB;
+    text-align: center;
+    font-family: Calibre-Bold,sans-serif;
+    font-size: 1.5rem;
+    font-weight: 700; 
+}
+
+.service_text_2{
+    color: #799DAB;
+    text-align: center;
+    font-family: Calibre-Medium,sans-serif;
+    font-size: 2rem;
+    font-weight: 500;
+    padding-bottom: 4.33rem;
+}
+
+/* Style for the container */
+#services {
+    margin-bottom: 1.25rem;
+    text-align: center;
+    align-content: center;
+    padding-bottom: 5rem;
+}
+
+.container_services_deals {
+    display: flex;
+    gap: 3.75rem;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+/* Container for service workspace */
+.container_services_workspace {
+    border-radius: 1.35rem;
+    background: var(--white);
+    box-shadow: 0rem 0.094rem 0.563rem 0rem rgba(20, 20, 43, 0.25);
+    width: 22.556rem;
+    height: 37.125rem;
+    display: flex;
+}
+
+/* The wrapper */
+.container_workspace_wrapper {
+    width: 21.825rem;
+    height: 32.175rem; 
+    padding-right: 2.25rem;
+    padding-left: 2.25rem;
+    margin-top: 1rem;
+}
+
+.img_service_circle {
+    display: flex;
+    align-items: center;
+    gap: 0.7rem;
+    color: var(--dark-blue);
+    font-size: 1.35rem;
+    font-family: calibre-Bold,sans-serif;
+}
+
+/* The icon for circle workspace */
+.icon_circle {
+    width: 4.05rem;
+    height: 4.05rem; 
+}
+
+.circle_text_1 {
+    padding-top: 0.7rem;
+    color: var(--text-color); 
+    font-size: 1.013rem;
+    text-align: start;
+    font-family: calibre-Medium,sans-serif;
+}
+
+.circle_text_2 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    font-family: calibre-Medium,sans-serif;
+    text-align: start;
+    color: var(--text-color);
+    font-style: normal;
+    line-height: 1.125rem; /* 111.111% */ 
+}
+
+.circle_text_3 {
+    font-family: Calibre-Bold,sans-serif;
+    font-size: 1.013rem;
+    display: flex;
+    color: var(--black);
+}
+
+.circle_text_4 {
+    font-weight: 700;
+    color: var(--text-color);
+    font-size: 1rem;
+    font-family: Calibre-Medium,sans-serif;
+}
+
+.money_text{
+    color: var(--text-color);
+    font-size: 2.5rem;
+    font-weight: 700;
+    line-height: 3.713rem; 
+    display: inline-flex;
+    font-family: calibre-Bold,sans-serif;
+    padding-right: 0.4rem;
+}
+
+/* container for the checkmarks and text */
+.check_list_services {
+    display: flex;
+    flex-direction: column;
+    height: 8.55rem;
+}
+
+.check_circle{
+    display: flex;
+}
+
+.check_circle_text{
+    display: flex;
+    gap: 0.875rem;
+    color: var(--text-color);
+    font-family: Calibre-Regular,sans-serif;
+    font-size: 1.013rem;
+    align-items: self-end;
+    padding-bottom: 0.875rem;
+}
+
+.circle_button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 17.325rem;
+    background-color: #799DAB;
+    border-radius: 1.125rem; 
+    height: 4.05rem;
+    font-family: Calibre-Bold,sans-serif;
+    font-size: 1.013rem;
+    color: white;
+    margin: 1rem 0;
+}
+
+.circle_button a {
+    color: white;
+    width: 100%;
+    height: 100%;
+}
+
+/* Container for the service D.O.T.S.*/
+.container_services_diamond {
+    border-radius: 1.35rem;
+    background: var(--white);
+    box-shadow: 0rem 0.094rem 0.563rem 0rem rgba(20, 20, 43, 0.25);
+    width: 22.556rem;
+    height: 37.125rem;
+    display: flex;
+}
+
+/* If you hover over the item with this element it will slightly grow in size */
+.hover_button:hover{ 
+    transition: transform 0.2s;
+    transform: scale(1.03);
+}
+
 /*  */
 /* Carousel */
 /*  */
@@ -733,6 +902,17 @@ header {
     font-size: 1.3rem;
 }
 
+/*  */
+/* Line */
+/*  */
+
+.line {
+    display: flex;
+    justify-content: center;
+    margin: 3rem 10rem;
+    height: 8px;
+    background-color: var(--normal-blue);
+}
 
 /*  */
 /* small line */
@@ -929,6 +1109,13 @@ header {
 /* Media tags */
 /*  */
 
+
+@media screen and (max-width: 1660px) {
+    .line {
+        margin: 3rem 8rem;
+    }
+}
+
 @media screen and (max-width: 1440px) {
 
     .values_small_boxes{
@@ -984,10 +1171,15 @@ header {
     nav ul {
         padding-right: 15rem;
     }
+    .line {
+        margin: 3rem 7rem;
+    }
 }
 
 @media screen and (max-width: 1024px) {
-
+    .line {
+        margin: 3rem 5rem;
+    }
     .small_middle {
         margin: 0;
     }
@@ -1055,6 +1247,9 @@ header {
     nav ul {
         padding-right: 2rem;
     }
+    .line {
+        margin: 3rem 4rem;
+    }
 }
 @media screen and (max-width: 640px) {
     .values_big_boxes {
@@ -1067,6 +1262,9 @@ header {
 
     .values_small_boxes {
         flex-wrap: wrap;
+    }
+    .line {
+        margin: 3rem 3rem;
     }
 }
 
