--- a/css/styles.css
+++ b/css/styles.css
@@ -1113,6 +1113,10 @@ header {
 /*  */
 /* Contact */
 /*  */
+
+#contact {
+    scroll-margin-top: 6rem;
+}
 .contact_form {
     margin-top: 5%;
     display:flex;
