added a hover effect to boxes on workspace and dots sites.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1389,7 +1389,7 @@ hr {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     width: 100%;
-    gap: 1rem;
+    gap: 2rem;
 }
 .circle_workspace_information_box {
     background-color: var(--white);
@@ -1399,6 +1399,7 @@ hr {
     flex-direction: column;
     text-align: center;
     align-items: center;
+    transition: 0.5s;
 }
 .circle_workspace_information_box img {
     height: 36px;
@@ -1446,6 +1447,11 @@ hr {
     max-width: 375px;
     margin: 0 3rem;
     color: var(--text-color);
+    transition: 0.5s;
+}
+
+.circle_workspace_pricing_box:hover {
+    scale: 1.05;
 }
 .circle_workspace_pricing_box_1 {
     display: flex;
@@ -1518,6 +1524,11 @@ hr {
     flex-direction: column;
     text-align: center;
     align-items: center;
+    transition: 0.5s;
+}
+.circle_dots_information_box:hover,
+.circle_workspace_information_box:hover {
+    scale: 1.05;
 }
 .circle_dots_information_box img {
     margin-top: 1rem;
@@ -1562,6 +1573,10 @@ hr {
     width: 100%;
     max-width: 375px;
     color: var(--text-color);
+    transition: 0.5s;
+}
+.circle_dots_pricing_box:hover {
+    scale: 1.05;
 }
 .circle_dots_pricing_box_1 {
     display: flex;
