padding-top values small box changed to 0.3rem

--- a/css/styles.css
+++ b/css/styles.css
@@ -1067,6 +1067,7 @@ header {
     border-radius: 20px;
     display: flex;
     align-items: center;
+    padding-top: 0.3rem;
 }
 .icon {
     padding-left: 1rem;
