--- a/css/styles.css
+++ b/css/styles.css
@@ -1260,6 +1260,7 @@ header {
     color: white;
     border-radius: 10px;
     padding: 8px;
+    text-decoration: none; 
 }
 .svg_icon {
     filter: var(--logo-filter);
@@ -1268,6 +1269,15 @@ header {
 .title_section {
     text-align: center;
 }
+
+ .contact_form a {
+        text-decoration: none; 
+        color: var(--black); 
+    }
+
+    .selected_link a {
+        color: var(--background);
+    }
 /*  */
 /* Footer */
 /*  */
