--- a/css/styles.css
+++ b/css/styles.css
@@ -529,36 +529,46 @@ header {
 /* Services */
 /*  */
 /* Text header */
-.service_text_1{
-    color: #799DAB;
-    text-align: center;
-    font-family: Calibre-Bold,sans-serif;
-    font-size: 1.5rem;
-    font-weight: 700; 
-}
-.service_text_2{
-    color: #799DAB;
-    text-align: center;
-    font-family: Calibre-Medium,sans-serif;
-    font-size: 2rem;
-    font-weight: 500;
-    padding-bottom: 4.33rem;
-}
-/* Style for the container */
 #services {
     margin-bottom: 1.25rem;
     text-align: center;
     align-content: center;
     padding-bottom: 5rem;
 }
-.container_services_deals {
+
+.services_text {
+    color: #799DAB;
+    text-align: center;
+    font-family: Calibre-Bold, sans-serif;
+}
+
+.section_title {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.content_title {
+    font-family: Calibre-Bold,sans-serif;
+    font-size: 1.013rem;
+    display: flex;
+    color: var(--black);
+    margin-bottom: 5px;
+}
+
+.sub_title {
+    font-size: 2rem;
+    font-weight: 500;
+    padding-bottom: 4.33rem;
+}
+
+.services_deals {
     display: flex;
     gap: 3.75rem;
     justify-content: center;
     flex-wrap: wrap;
 }
-/* Container for service workspace */
-.container_services_workspace {
+
+.service_item {
     border-radius: 1.35rem;
     background: var(--white);
     box-shadow: 0rem 0.094rem 0.563rem 0rem rgba(20, 20, 43, 0.25);
@@ -568,8 +578,8 @@ header {
     max-height: 37.125rem;
     display: flex;
 }
-/* The wrapper */
-.container_workspace_wrapper {
+
+.service_wrapper {
     width: 100%;
     height: 100%;
     max-width: 22.556rem;
@@ -578,136 +588,107 @@ header {
     padding-left: 2.25rem;
     margin-top: 1rem;
 }
-.img_service_circle {
+
+.service_icon {
     display: flex;
     align-items: center;
     gap: 0.7rem;
     color: var(--dark-blue);
     font-size: 1.35rem;
-    font-family: calibre-Bold,sans-serif;
+    font-family: calibre-Bold, sans-serif;
 }
-/* The icon for circle workspace */
-.icon_circle {
+
+.service_icon span {
+    font-family: calibre-Bold, sans-serif;
+
+}
+
+.service_icons {
     width: 4.05rem;
-    height: 4.05rem; 
+    height: 4.05rem;
 }
-.circle_text_1 {
+
+.service_description {
     padding-top: 0.7rem;
-    color: var(--text-color); 
+    color: var(--text-color);
     font-size: 1.013rem;
     text-align: start;
-    font-family: calibre-Medium,sans-serif;
+    font-family: calibre-Medium, sans-serif;
 }
-.circle_text_2 {
+
+.pricing {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    font-family: calibre-Medium,sans-serif;
+    font-family: calibre-Medium, sans-serif;
     text-align: start;
     color: var(--text-color);
     font-style: normal;
-    line-height: 1.125rem; /* 111.111% */ 
+    line-height: 1.125rem;
 }
-.circle_text_3 {
-    font-family: Calibre-Bold,sans-serif;
-    font-size: 1.013rem;
-    display: flex;
-    color: var(--black);
-}
-.circle_text_4 {
+
+.price_info {
     font-weight: 700;
     color: var(--text-color);
     font-size: 1rem;
-    font-family: Calibre-Medium,sans-serif;
+    font-family: Calibre-Medium, sans-serif;
 }
-.money_text{
+
+.price {
     color: var(--text-color);
     font-size: 2.5rem;
     font-weight: 700;
-    line-height: 3.713rem; 
+    line-height: 3.713rem;
     display: inline-flex;
-    font-family: calibre-Bold,sans-serif;
+    font-family: calibre-Bold, sans-serif;
     padding-right: 0.4rem;
 }
-/* container for the checkmarks and text */
-.check_list_services {
+
+.features_list {
     display: flex;
     flex-direction: column;
     height: 8.55rem;
 }
-.check_circle{
+
+.check_icon {
     display: flex;
 }
-.check_circle_text{
+
+.feature {
     display: flex;
     gap: 0.875rem;
     color: var(--text-color);
-    font-family: Calibre-Regular,sans-serif;
+    font-family: Calibre-Regular, sans-serif;
     font-size: 1.013rem;
     align-items: self-end;
     padding-bottom: 0.875rem;
 }
-.circle_button{
+
+.service_btn {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 17.325rem;
     background-color: #799DAB;
-    border-radius: 1.125rem; 
+    border-radius: 1.125rem;
     height: 4.05rem;
-    font-family: Calibre-Bold,sans-serif;
+    font-family: Calibre-Bold, sans-serif;
     font-size: 1.013rem;
     color: white;
     margin: 1rem 0;
-}
-.circle_button a {
-    color: white;
-    width: 100%;
-    height: 100%;
-}
-/* Container for the service D.O.T.S.*/
-.container_services_diamond {
-    border-radius: 1.35rem;
-    background: var(--white);
-    box-shadow: 0rem 0.094rem 0.563rem 0rem rgba(20, 20, 43, 0.25);
-    max-width: 22.556rem;
-    max-height: 37.125rem;
-    width: 100%;
-    height: 100%;
-    display: flex;
 }
 
-.services_button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #799DAB;
-    border-radius: 1.125rem; 
-    height: 4.05rem;
-    font-family: Calibre-Bold,sans-serif;
-    font-size: 1.013rem;
-    color: white;
-    margin: 1rem 0;
-}
-/* If you hover over the item with this element it will slightly grow in size */
-.hover_button:hover{ 
+.hover_effect:hover {
     transition: transform 0.2s;
     transform: scale(1.03);
 }
 
 @media screen and (max-width: 640px) {
-    .container_services_workspace {
-        max-width: 5000rem;
-        max-height: 5000rem;
-    }
-    .container_services_diamond {
-        max-width: 5000rem;
-        max-height: 5000rem;
-    }
-    .container_workspace_wrapper {
+    .service_item, .service_wrapper {
         max-width: 5000rem;
         max-height: 5000rem;
     }
 }
+
+
 /*  */
 /* Carousel */
 /*  */
@@ -718,7 +699,7 @@ header {
     justify-content: center;
     flex-direction: column;
 }
-.hiddenContainer{
+.hidden_container{
     overflow: hidden;
     width: 100%;
 }
