added header_btn in styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -571,6 +571,19 @@ header {
     color: white;
 }
 
+.header_btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #799DAB;
+    border-radius: 1.125rem;
+    height: 4.05rem;
+    font-family: Calibre-Bold, sans-serif;
+    font-size: 1.013rem;
+    color: white;
+    margin: 1rem 0;
+}
+
 /*  */
 /* About us */
 /*  */
